Added resources for s30 pt 2

--- a/backend/s30/index.html
+++ b/backend/s30/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<h1>Posts</h1>
+	<button id="delete-all">Delete All</button>
 	<div id="div-post-entries"></div>
 	<hr>
 	<h1>Add post</h1>
